--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "jose": "^6.1.2",
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.554.0",
+    "marked": "^17.0.1",
     "next": "16.0.4",
     "next-themes": "^0.4.6",
     "nodemailer": "^7.0.10",
